--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -3,29 +3,44 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:gravity="center"
-    android:padding="24dp">
+    android:padding="16dp">
+
+
 
     <ImageView
         android:id="@+id/detail_image"
-        android:layout_width="120dp"
-        android:layout_height="120dp"
+        android:layout_width="200dp"
+        android:layout_height="200dp"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="16dp"
         android:scaleType="centerInside" />
 
     <TextView
         android:id="@+id/detail_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="16dp"
         android:textSize="24sp"
-        android:layout_marginTop="16dp"/>
+        android:textStyle="bold" />
 
+    <TextView
+        android:id="@+id/store_phone"
+        android:text="0123456789"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="16dp"
+        android:textSize="18sp"
+        android:textColor="#0000FF"
+        android:clickable="true"
+        android:focusable="true" />
     <Button
         android:id="@+id/button_back"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Back to List"
-        android:layout_marginTop="24dp"
-        android:background="@drawable/button_background"
-        android:textColor="@android:color/white"
-        android:onClick="onBackButtonClicked"/>
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="16dp"
+        android:text="Back" />
+
 </LinearLayout>
