--- a/app/src/main/res/layout/item_product.xml
+++ b/app/src/main/res/layout/item_product.xml
@@ -23,12 +23,14 @@
         android:layout_marginTop="8dp"
         android:gravity="center"/>
 
-    <ImageButton
+    <Button
         android:id="@+id/add_to_cart_button"
-        android:layout_width="36dp"
-        android:layout_height="36dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_marginTop="4dp"
-        android:background="?attr/selectableItemBackgroundBorderless"
-        android:src="@android:drawable/ic_input_add"
+        android:layout_gravity="center"
+        android:textColor="@android:color/white"
+        android:background="@drawable/button_background"
+        android:text="Add to Cart"
         android:contentDescription="Add to cart" />
 </LinearLayout>
