--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,6 +1,6 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Base.Theme.FacebookApplication" parent="Theme.Material3.DayNight.NoActionBar">
+    <style name="Base.Theme.FacebookApplication" parent="Theme.Material3.DayNight">
         <!-- Customize your light theme here. -->
         <item name="colorPrimary">#3b5998</item>
         <item name="colorPrimaryDark">#2f477a</item>
@@ -10,4 +10,11 @@
     </style>
 
     <style name="Theme.FacebookApplication" parent="Base.Theme.FacebookApplication" />
+
+    <!-- No ActionBar theme for login screen -->
+    <style name="Theme.FacebookApplication.NoActionBar" parent="Base.Theme.FacebookApplication">
+        <item name="windowActionBar">false</item>
+        <item name="windowNoTitle">true</item>
+    </style>
 </resources>
+
