--- a/app/src/main/res/layout/item_cart.xml
+++ b/app/src/main/res/layout/item_cart.xml
@@ -29,9 +29,11 @@
         android:layout_marginEnd="8dp" />
 
     <ImageView
+
         android:id="@+id/remove_item_button"
-        android:layout_width="24dp"
-        android:layout_height="24dp"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:contentDescription="Remove item"
         android:src="@android:drawable/ic_menu_delete"
         android:clickable="true"
         android:focusable="true"
